--- a/.github/ISSUE_TEMPLATE/06_general-task.yml
+++ b/.github/ISSUE_TEMPLATE/06_general-task.yml
@@ -2,6 +2,33 @@ name: General Task
 description: General task that doesn't apply to a specific area.
 type: Task
 body:
+  - type: dropdown
+    id: issue-area
+    attributes:
+      multiple: true
+      label: Ralston Ecosystem Area
+      description: Select one or more areas to which this applies. Selecting these will automatically apply the appropriate labels and help with triage.
+      options:
+        - Console
+        - Customer.io
+        - Distributors App
+        - Mule Gateway
+        - Portal Admin
+        - Portal App
+        - Products App
+        - Ralston Auth
+        - RalstonFieldLab.com
+        - RI Website
+        - Zoho CRM
+        - Zoho Desk
+        - 'FieldLab API'
+        - 'FieldLab Web App'
+        - 'Firmware: FieldLab'
+        - 'Firmware: FieldLab Sensor'
+        - 'Firmware: LC Gauge'
+        - 'FieldLab Mobile App'
+        - 'FieldLab Desktop Windows App'
+        - 'Prime Windows App'
   - type: textarea
     id: description
     attributes:
