--- a/.github/ISSUE_TEMPLATE/07_deploy.yml
+++ b/.github/ISSUE_TEMPLATE/07_deploy.yml
@@ -3,6 +3,33 @@ description: Collection of issues to be released together from this repository
 type: Deploy
 title: Deploy repo_name [semver]
 body:
+  - type: dropdown
+    id: issue-area
+    attributes:
+      multiple: true
+      label: Ralston Ecosystem Area
+      description: Select one or more areas to which this applies. Selecting these will automatically apply the appropriate labels and help with triage.
+      options:
+        - Console
+        - Customer.io
+        - Distributors App
+        - Mule Gateway
+        - Portal Admin
+        - Portal App
+        - Products App
+        - Ralston Auth
+        - RalstonFieldLab.com
+        - RI Website
+        - Zoho CRM
+        - Zoho Desk
+        - 'FieldLab API'
+        - 'FieldLab Web App'
+        - 'Firmware: FieldLab'
+        - 'Firmware: FieldLab Sensor'
+        - 'Firmware: LC Gauge'
+        - 'FieldLab Mobile App'
+        - 'FieldLab Desktop Windows App'
+        - 'Prime Windows App'
   - type: textarea
     id: issues
     attributes:
